# Helios

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  NOTICE.md  bob_quick_reference.docx  setup-cloudant-dbs.ps1  setup-ibmcloud-resources.ps1  setup-ibmcloud-simple.ps1
.bob/: mcp.json
.github/workflows/: backend-deploy.yml  frontend-deploy.yml  pr.yml
Bob Report/: bob_task_may-3-2026_5-06-29-pm.md  bob_task_may-3-2026_8-48-23-am.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  envelope.py  errors.py  logging.py  main.py  middleware.py  version.py
backend/app/api/: __init__.py  abend.py  audit.py  auth.py  health.py  jcl.py  jjscan.py  learning.py  promote.py  queue.py  regions.py  runbooks.py  score.py  ws_queue.py
backend/app/jobs/: __init__.py  runner.py
backend/app/models/: __init__.py  abend.py  audit.py  auth.py  common.py  jcl.py  jjscan.py  learning.py  promote.py  queue.py  region.py  runbook.py  score.py  user.py
backend/app/services/: __init__.py  abend_classifier.py  audit_listener.py  audit_writer.py  auth.py  backup_generator.py  cloudant.py  region_atlas.py  review_policy.py  score.py  watsonx.py
backend/app/services/jjscan/: __init__.py  framework.py  rules.py
backend/app/services/mainframe_parser/: __init__.py  cobol.py  gaps.py  jcl.py  pli.py  proc.py  sql_ddl.py
backend/app/utils/: canonical_json.py
backend/deploy/: code-engine.yaml  deploy.sh
backend/migrations/: apply_indexes.py  cloudant_indexes.json  seed_corpus.py  seed_demo.py
bench/: calibrate_confidence.py  seed_running_server.py
bob_prompts/: scene_1_2_stub_landing.md
docs/: .env.example  .gitignore  ABEND_PATTERN_LIBRARY.md  AGENTS.md  API.md  API.md.tools.md  ARCHITECTURE.md  AUDIT_LOG.md  AUDIT_LOG_IMPLEMENTATION_NOTES.md  BANKDEMO_INTEGRATION.md  BOBCOIN_BUDGET.md  CHANGELOG.md  CLAUDE.md.template  CODE_OF_CONDUCT.md  CONFIDENCE_SCORE.md  CONTRIBUTING.md  CORPUS.md  DATA_MODEL.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOY_PLAN_2026-05-03.md  DOCS_INDEX.md  FAQ.md  FRONTEND.md  GLOSSARY.md  HERO_SHOTS.md  INSTALLATION.md  JJSCAN_PLUS_RULES.md  JUDGING_ALIGNMENT.md  KICKOFF_CHECKLIST.md  LEARNING_LOOP.md  LICENSE  MCP_SETUP.md  MCP_SETUP_SUMMARY.md  PERSONA_MAYA.md  PHASE_PLAN.md  PROBLEM_STATEMENT.md  PR_TEMPLATE.md  QA_PREP.md  README.md  (+14 more)
frontend/: .env.example  .eslintrc.json  .prettierignore  .prettierrc.json  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.storybook/: main.ts  preview.tsx
frontend/public/: 404.html  mockServiceWorker.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/abend/: page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/confidence/: page.tsx
frontend/src/app/jjscan/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/regions/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/app/runbooks/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/layout/: app-shell.tsx  breadcrumbs.tsx  sidebar.tsx  top-nav.tsx
frontend/src/components/ui/: badge.stories.tsx  badge.tsx  bob-stub.tsx  button.stories.tsx  button.tsx  card.tsx  data-table.tsx  dialog.tsx  empty-state.tsx  error-boundary.tsx  input.tsx  label.tsx  page-header.tsx  skeleton.tsx  textarea.tsx  toast.tsx
frontend/src/features/abend/: analysis-pane.stories.tsx  types.ts  (+3 more)
frontend/src/lib/: env.ts  utils.ts
frontend/src/mocks/: bankdemo-samples.ts  browser.ts  fixtures.ts  handlers.ts  node.ts
frontend/src/test/: setup.ts
mcp-servers/: README.md  pyproject.toml
mcp-servers/_shared/: __init__.py  tool_registry.py
mcp-servers/cloudant/: README.md  __init__.py  server.py
mcp-servers/helios_corpus/: README.md  __init__.py  server.py  smoke.py
mcp-servers/ibm_cloud/: README.md  __init__.py  server.py
mcp-servers/watsonx_server/: README.md  __init__.py  server.py
shared/: README.md
shared/codegen/: README.md  dump_constants.py  dump_openapi.py  pydantic_to_typescript.py
shared/config/: review_queue_defaults.yaml
shared/constants/: banned_watsonx_models.json  features.json  severities.json  statuses.json
shared/sample-corpus/abend_patterns/: patterns.yaml
shared/sample-corpus/jcl/: CUST_DELETE_INACTIVE.JCL
shared/sample-corpus/regions/: dev1.yaml  dev2.yaml  dev3.yaml  int1.yaml  int2.yaml  int3.yaml  prod.yaml
shared/sample-corpus/runbooks/: IEC141I_member_not_found.md  S0C7_CUSTPROC_age_calc.md  SQLCODE_805_int2_bind.md
shared/schemas/: api.openapi.json  region.json
tools/: gitignore_cleanup.sh  lint_audit_calls.py
(+45 files in other folders)
