[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-backend"
version = "0.1.0"
description = "Helios — AI control plane for z/OS modernization (FastAPI backend)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Helios Team" }]
dependencies = [
    "fastapi>=0.115,<0.117",
    # Starlette 1.0+ removed Router(on_startup=...); FastAPI 0.116 still passes
    # it. Sibling packages (mcp, google-adk) tried to pull starlette 1.0; pin
    # to the compatible band until FastAPI catches up.
    "starlette>=0.40,<0.49",
    "uvicorn[standard]>=0.30,<0.33",
    "pydantic[email]>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<0.29",
    "python-jose[cryptography]>=3.3,<4",
    "python-multipart>=0.0.9",
    "structlog>=24.1,<26",
    "ulid-py>=1.1,<2",
    "tenacity>=9.0,<10",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<0.29",
    "ruff>=0.6,<0.9",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0,<7",
    "respx>=0.21,<0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "mcp*", "migrations*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "PT",            # pytest
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length — handled by formatter
    "B008",          # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "PT011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = ["tests/", "migrations/"]

[[tool.mypy.overrides]]
module = ["jose.*", "ulid.*"]
ignore_missing_imports = true

# FastAPI route handlers heavily use ``Depends(...)`` defaults and pass
# generic dicts through to the envelope layer, both of which mypy strict
# flags. The pattern is idiomatic; relax strict on the API layer so the
# type-checker stays useful where it actually catches bugs (services /
# models / clients).
[[tool.mypy.overrides]]
module = "app.api.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
warn_return_any = false
ignore_errors = true

# Pre-existing type debt in service-layer modules. Each call site hides
# ``Any`` returns from httpx/cloudant/watsonx clients or uses the legacy
# ``callable`` type annotation. Tracked separately; not introduced or
# expanded by current work.
[[tool.mypy.overrides]]
module = [
    "app.services.cloudant",
    "app.services.watsonx",
    "app.services.audit_listener",
    "app.services.mainframe_parser.cobol",
    "app.services.mainframe_parser.jcl",
    "app.services.mainframe_parser.pli",
    "app.logging",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:app.*"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
