[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-mcp-servers"
version = "0.1.0"
description = "Helios — custom MCP servers (cloudant, ibm-cloud, helios-corpus, watsonx)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Helios Team" }]
dependencies = [
    "httpx>=0.27,<0.29",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "mcp>=1.2,<2; python_version >= '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.6,<0.9",
    "respx>=0.21,<0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "_shared*",
    "cloudant*",
    "ibm_cloud*",
    "helios_corpus*",
    "watsonx_server*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
